# MusicMax

./: .gitignore  app.json  config.py  pyproject.toml  sample.env  setup
.github/: README.md
anony/: __init__.py  __main__.py
anony/core/: audio.py  bot.py  calls.py  custom_emoji.py  database.py  health.py  lang.py  play_card.py  play_message.py  recovery.py  rich_messages.py  supervisor.py  telegram.py  themes.py  userbot.py  voice_worker.py  voice_worker_process.py  youtube.py
anony/helpers/: __init__.py  _admins.py  _feedback.py  _inline.py  _navigation.py  _play.py  _queue.py  _stats_card.py  _thumbnails.py  _utilities.py
anony/locales/: en.json  my.json
anony/plugins/: active.py  auth.py  broadcast.py  callbacks.py  health_alerts.py  iquery.py  language.py  loop.py  misc.py  pause.py  ping.py  play.py  queue.py  restart.py  resume.py  runtime_config.py  seek.py  sessions.py  setup.py  skip.py  song.py  start.py  stats.py  stop.py  sudoers.py  texts.py  themes.py  trending.py
docs/: PM2_RELIABILITY.md  TELEGRAM_UI_REFACTOR_PLAN.md  TELEGRAM_UI_STYLE.md
scripts/: sudoers.py  test_cookies.py  watchdog.py
tests/: test_assistant_failover.py  test_audio_modes.py  test_bot_only.py  test_callback_answers.py  test_custom_emoji.py  test_external_watchdog.py  test_play_button.py  test_play_image_cache.py  test_play_message.py  test_playback_quality.py  test_playback_recovery.py  test_reliability.py  test_rich_messages.py  test_runtime_config_ui.py  test_sessions_force_reply.py  test_themes.py  test_ui_helpers.py  test_voice_workers.py  test_youtube_performance.py
(+8 files in other folders)
