[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anonxmusic"
version = "3.0.3"
description = "Telegram Group Calls Streaming bot with some useful features."
readme = ".github/README.md"
requires-python = ">=3.10"

dependencies = [
    "aiosqlite>=0.22.1",
    "aiohttp~=3.14.1",
    "kurigram>=2.2.22",
    "pillow~=12.2.0",
    "psutil~=7.2.2",
    "py-tgcalls~=2.2.11",
    "py-yt-search~=0.6.2",
    "pytgcrypto>=1.2.11",
    "python-dotenv~=1.2.1",
    "yt-dlp[default]>=2026.3.17",
]

[tool.setuptools]
py-modules = ["config"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["anony", "anony.*"]
exclude = ["data*", "cache*", "downloads*", "setup*"]

[tool.setuptools.package-data]
anony = ["locales/*.json", "locales/*.md"]
